# Hacka-Back

./: .env.example  manage.py  pyproject.toml  requirements.txt
hacka_kenzie/: asgi.py  settings.py  urls.py  wsgi.py
hackakenzie/: asgi.py  settings.py  urls.py  wsgi.py
