[tool.poetry]
name = "hack-back"
version = "0.1.0"
description = "Back End do Labtech - Hacka Kenzie"
authors = [
    "Jalles <jallessantos12@gmail.com>",
    "Lucas <lucaslamas13@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
